k8s-manifests/apps/core-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core
  namespace: attestry
  labels:
    app.kubernetes.io/name: core
    app.kubernetes.io/part-of: attestry
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: attestry-dev
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:459742122195:certificate/7bbfcbd5-5368-4ce5-99a7-714f4275afea
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
spec:
  ingressClassName: alb
  rules:
    - host: api.proveny.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core
                port:
                  number: 80
